--- a/market/src/main/res/layout/fragmennt_market.xml
+++ b/market/src/main/res/layout/fragmennt_market.xml
@@ -5,7 +5,8 @@
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@color/design_default_color_primary_dark">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
